--- a/13Day.html
+++ b/13Day.html
@@ -69,7 +69,7 @@
         <source src="https://kidori777.github.io/Korean-lesson/day13-1A.mp3" type="audio/mpeg">
       </audio>
 
-      <div class="line"><strong>B:</strong> 네, 051-293-9285이에요.</div>
+      <div class="line"><strong>B:</strong> 네, 051-293-9285입니다.</div>
       <div class="sinhala"><strong>B (සිංහල):</strong> ඔව්, 051-293-9285යි.</div>
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day13-1B.mp3" type="audio/mpeg">
@@ -106,3 +106,4 @@
   </div>
 </body>
 </html>
+
