--- a/15Day.html
+++ b/15Day.html
@@ -156,3 +156,13 @@
       <div class="line"><strong>B:</strong> 알겠습니다. 필요한 게 있으면 말씀 주세요.</div>
       <div class="sinhala"><strong>B (සිංහල):</strong> හරි. අවශ්‍ය දෙයක් තියෙනවා නම් කියන්න.</div>
       <audio controls>
+        <source src="https://kidori777.github.io/Korean-lesson/day15-6B.mp3" type="audio/mpeg">
+      </audio>
+
+      <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
+    </div>
+
+    <div class="footer">© 하루 한국어 | 요청도 자연스럽게 말해요!</div>
+  </div>
+</body>
+</html>
