--- a/15Day.html
+++ b/15Day.html
@@ -63,6 +63,7 @@
     .repeat {
       font-size: 14px;
       color: #777;
+      margin-top: 10px;
     }
     .footer {
       text-align: center;
@@ -88,6 +89,7 @@
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day15-1B.mp3" type="audio/mpeg">
       </audio>
+      <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
     </div>
 
     <div class="dialogue confused">
@@ -102,6 +104,7 @@
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day15-2B.mp3" type="audio/mpeg">
       </audio>
+      <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
     </div>
 
     <div class="dialogue worried">
@@ -116,6 +119,7 @@
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day15-3B.mp3" type="audio/mpeg">
       </audio>
+      <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
     </div>
 
     <div class="dialogue confused">
@@ -130,6 +134,7 @@
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day15-4B.mp3" type="audio/mpeg">
       </audio>
+      <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
     </div>
 
     <div class="dialogue sick">
@@ -144,25 +149,23 @@
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day15-5B.mp3" type="audio/mpeg">
       </audio>
-    </div>
-
-    <div class="dialogue urgent">
-      <div class="line"><strong>A:</strong> 급하게 병원에 가야 해서 자리를 비워야 해요.</div>
-      <div class="sinhala"><strong>A (සිංහල):</strong> හදිසියේ රෝහලට යන්න ඕනෙ. ඒක නිසා මම තැනින් ඉවත්වන්න ඕනෙ.</div>
-      <audio controls>
-        <source src="https://kidori777.github.io/Korean-lesson/day15-6A.mp3" type="audio/mpeg">
-      </audio>
-
-      <div class="line"><strong>B:</strong> 알겠습니다. 필요한 게 있으면 말씀 주세요.</div>
-      <div class="sinhala"><strong>B (සිංහල):</strong> හරි. අවශ්‍ය දෙයක් තියෙනවා නම් කියන්න.</div>
-      <audio controls>
-        <source src="https://kidori777.github.io/Korean-lesson/day15-6B.mp3" type="audio/mpeg">
-      </audio>
-
       <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
     </div>
+	
+    <div class="dialogue urgent">
+	  <div class="line"><strong>A:</strong> 급하게 병원에 가야 해서 자리를 비워야 해요.</div>
+	  <div class="sinhala"><strong>A හදිසියේ රෝහලට යන්න ඕනෙ. ඒක නිසා මම තැනින් ඉවත්වන්න ඕනෙ.</strong> ... </div>
+	  <audio controls>
+		<source src="https://kidori777.github.io/Korean-lesson/day15-6A.mp3">
+	  </audio>
+	  <div class="line"><strong>B:</strong> 알겠습니다. 필요한 게 있으면 말씀 주세요.</div>
+	  <div class="sinhala"><strong>B හරි. අවශ්‍ය දෙයක් තියෙනවා නම් කියන්න.</strong> ... </div>
+	  <audio controls>
+		<source src="https://kidori777.github.io/Korean-lesson/day15-6B.mp3">
+	  </audio>
+	  <div class="repeat">→ A와 B 모두 듣고 따라 말해보세요</div>
+	</div>
 
-    <div class="footer">© 하루 한국어 | 요청도 자연스럽게 말해요!</div>
-  </div>
-</body>
+      <div class="footer">© 하루 한국어 | 요청도 자연스럽게 말해요!</div>
+    </body>
 </html>
