--- a/19Day.html
+++ b/19Day.html
@@ -66,7 +66,7 @@
       <div class="sinhala"><strong>A (සිංහල):</strong> ටොයිලට් පේපර් සහ සෝදන ද්‍රව්‍ය කොහෙද මිලදී ගන්නෙ?</div>
       <audio controls><source src="https://kidori777.github.io/Korean-lesson/day19-2A.mp3" type="audio/mpeg"></audio>
 
-      <div class="line"><strong>B:</strong> 생활용품 코너는 3번 통로에 있어요. 파란색 표시 보시면 돼요.</div>
+      <div class="line"><strong>B:</strong> 생활용품 코너는 3번 통로에 있어요. 파란색 표시 보시면 됩니다.</div>
       <div class="sinhala"><strong>B (සිංහල):</strong> ජීවන භාණ්ඩ කොන 3 වෙනි මාර්ගෙදි තියෙනවා. නිල් පාට සලකුණ බලන්න.</div>
       <audio controls><source src="https://kidori777.github.io/Korean-lesson/day19-2B.mp3" type="audio/mpeg"></audio>
       <div class="repeat-text">→ A와 B 모두 듣고 따라 말해보세요</div>
