--- a/19Day.html
+++ b/19Day.html
@@ -144,7 +144,7 @@
         <source src="https://kidori777.github.io/Korean-lesson/day19-7A.mp3" type="audio/mpeg">
       </audio>
 
-      <div class="line"><strong>B:</strong> 네, 3,900원은 작은 사이즈고, 5,900원은 큰 사이즈예요.</div>
+      <div class="line"><strong>B:</strong> 네, 3,900원은 작은 사이즈고 5,900원은 큰 사이즈예요.</div>
       <div class="sinhala"><strong>B (සිංහල):</strong> ඔව්, 3,900 원 කියන්නේ පොඩි එකට. 5,900 원 කියන්නේ ලොකු එකට.</div>
       <audio controls>
         <source src="https://kidori777.github.io/Korean-lesson/day19-7B.mp3" type="audio/mpeg">
