--- a/Love1971.html
+++ b/Love1971.html
@@ -90,7 +90,8 @@
 사랑해 당신을 정말로 사랑해  
 
 사랑해 당신을 정말로  
-사랑해 정말로 사랑해
+사랑해 정말로 사랑해  
+정말로 사랑해
     </div>
   </div>
 
@@ -111,7 +112,8 @@
 මම ඔබට ඇත්තටම ආදරෙයි  
 
 මම ඔබට ඇත්තටම  
-ආදරෙයි, ඇත්තටම ආදරෙයි
+ආදරෙයි, ඇත්තටම ආදරෙයි  
+ඇත්තටම ආදරෙයි
     </div>
   </div>
 
