--- a/Love1971.html
+++ b/Love1971.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -89,8 +90,7 @@
 예 예 예 예 예 예  
 사랑해 당신을 정말로 사랑해  
 
-사랑해 당신을 정말로  
-사랑해 정말로 사랑해  
+사랑해 당신을 정말로 사랑해 
 정말로 사랑해
     </div>
   </div>
