--- a/EjrqhRdl.html
+++ b/EjrqhRdl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔥 제미니 시그니처: 궁극의 감칠맛 떡볶이 레시피</title>
-    <link href="https://kidori777.github.io/Korean-lesson/EjrqhRdl.png:wght@300;400;500;700&display=swap" rel="stylesheet">
+    
     <style>
         /* 기본 스타일 및 폰트 설정 */
         body {
@@ -282,7 +282,7 @@
         </div>
 
         <div class="recipe-image">
-            <img src="https://via.placeholder.com/1200x500/D90429/FFFFFF?text=Gemini+Signature+Tteokbokki+Image" alt="궁극의 감칠맛 떡볶이 사진">
+            <img src="https://kidori777.github.io/Korean-lesson/EjrqhRdl.png" alt="감칠맛 떡볶이" style="max-width: 100%; height: auto; max-height: 500px;">
         </div>
 
         <div class="recipe-section">
